Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/inference/8015505/T8015505.out
T8015505.java:16:22: compiler.err.prob.found.req: (compiler.misc.infer.no.conforming.instance.exists: Z, java.util.List, java.util.List<?>)
1 error
